# cg2sandbox

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README (MAC detailed).txt  README.md  README.txt
assimp/code/: LWOAnimation.cpp
cmake/: PlatformLinuxGCC.cmake
data/: .gitignore  assimp.frag  assimp.vert  companion_cube.mtl  cooktorrance.frag  default.frag  default.vert  diffuse.frag  dump.frag  dump.vert  emission.frag  envmap.frag  envmap.vert  envmap_cube.frag  envmap_cube.geom  envmap_cube.vert  gaussv.frag  hpicgs.mtl  label.vert  labelAM.frag  labelDM.frag  metaballs.frag  normal.frag  particle_draw_5.vert  particle_draw_5_1.frag  particle_draw_5_2.frag  particle_draw_5_3.frag  particle_glow_5_4.frag  particle_glow_5_4.vert  particle_step.frag  particle_step.vert  phong.frag  phong.vert  plane.mtl  render.frag  render.vert  render_flat.vert  screenalignedquad.vert  shadowmap.frag  shadowmap.vert  (+17 more)
docs/doxygen/: doxyfile.in
source/: AbstractCoordinateProvider.h  AbstractPainter.cpp  AbstractPainter.h  AdaptiveGrid.cpp  AdaptiveGrid.h  Application.cpp  Application.h  AssimpScene.cpp  AssimpScene.h  AutoTimer.cpp  AutoTimer.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  Boundary.cpp  Boundary.h  CMakeLists.txt  CachedValue.h  CachedValue.hpp  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  ChronoTimer.cpp  ChronoTimer.h  CyclicTime.cpp  CyclicTime.h  DistanceTransform.cpp  DistanceTransform.h  FileAssociatedAsset.cpp  FileAssociatedAsset.h  FileAssociatedShader.cpp  FileAssociatedShader.h  FileAssociatedTexture.cpp  FileAssociatedTexture.h  FlightNavigation.cpp  FlightNavigation.h  Icosahedron.cpp  Icosahedron.h  MathMacros.h  MessageHandler.cpp  (+23 more)
